app2AuthenticationGenerator/microservice4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-microservice4
spec:
  selector:
    app: app2-microservice4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8013
  type: ClusterIP
