app2AuthenticationGenerator/microservice4/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app2-microservice4
spec:
  selector:
    matchLabels:
      app: app2-microservice4
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app2-microservice1",
          "cluster.local/ns/default/sa/app2-microservice2"
        ]
